--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,41 @@
   
     <properties>  
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
+	    <spring.version>4.3.7.RELEASE</spring.version>
         <main.path>application.Main</main.path>
     </properties>  
  
    
     <dependencies>
+    	  <!-- Spring依赖 -->
+	    <!-- 1.Spring核心依赖 -->
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-core</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-beans</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-context</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-jdbc</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-tx</artifactId>
+	        <version>${spring.version}</version>
+	    </dependency>
+
+    
 		<!-- 阿里fastjson -->
 		<dependency>
 		    <groupId>com.alibaba</groupId>
@@ -111,10 +141,23 @@
     		<artifactId>httpcore</artifactId>
     		<version>4.4.6</version>
     	</dependency>
+    	
+    	<!-- 引入单机版缓存机制 ehcache -->
+		<dependency>
+		    <groupId>net.sf.ehcache</groupId>
+		    <artifactId>ehcache</artifactId>
+		    <version>2.10.4</version>
+		</dependency>
+    	
     </dependencies>
     
      <build>  
         <plugins>  
+	        <plugin>
+	           <groupId>org.springframework.boot</groupId>
+	           <artifactId>spring-boot-maven-plugin</artifactId>
+	         </plugin>
+	         
             <plugin>  
                 <groupId>org.apache.maven.plugins</groupId>  
                 <artifactId>maven-compiler-plugin</artifactId>  
@@ -192,6 +235,13 @@
 			<resource>
 				<filtering>false</filtering>
 				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.*</include>
+				</includes>
+			</resource>
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.*</include>
 				</includes>
