--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,7 @@
                                 <mainClass>${main.path}</mainClass>  
                                 <preCp>anything</preCp>  
                             </classPath>  
-                            <icon>resources/0.ico</icon>  
+                            <icon>resources/icon.png</icon> 
                             <jre>  
                                 <minVersion>1.8.0</minVersion>  
                                 <jdkPreference>preferJre</jdkPreference>  
