--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,12 @@
     		<artifactId>commons-io</artifactId>
     		<version>2.6</version>
     	</dependency>
-    	
+    	<!-- 引入commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.7</version>
+		</dependency>
     	<!-- 日志组件 -->
     	<dependency>
     		<groupId>log4j</groupId>
