--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
 	    <spring.version>4.3.7.RELEASE</spring.version>
 	    <poi.version>3.17</poi.version>
-        <main.path>application.Main</main.path>
+        <main.path>com.kendy.application.Main</main.path>
     </properties>  
  
    
