--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,13 @@
 					<include>**/*.*</include>
 				</includes>
 			</resource>
+			<resource>
+                <filtering>false</filtering>
+                <directory>/docs</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
 		</resources>
     </build>  
 </project>
