--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	    <spring.version>4.3.7.RELEASE</spring.version>
 	    <poi.version>3.17</poi.version>
         <main.path>com.kendy.application.Main</main.path>
+<!--         <main.path>com.kendy.test.TestApplication</main.path> -->
     </properties>  
  
    
@@ -193,6 +194,14 @@
                     <shadedArtifactAttached>true</shadedArtifactAttached>  
                     <shadedClassifierName>shaded</shadedClassifierName>  
                     <transformers>  
+						<transformer  
+						    implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">  
+						    <resource>META-INF/spring.handlers</resource>  
+						</transformer>  
+						<transformer  
+						    implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">  
+						    <resource>META-INF/spring.schemas</resource>  
+						</transformer> 
                         <transformer  
                             implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">  
                             <mainClass>${main.path}</mainClass>  
