--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,7 @@
 	    <spring.version>4.3.7.RELEASE</spring.version>
 	    <poi.version>3.17</poi.version>
         <main.path>com.kendy.application.Main</main.path>
-<!--         <main.path>com.kendy.test.TestApplication</main.path> -->
     </properties>  
- 
    
     <dependencies>
     	  <!-- Spring依赖 -->
@@ -167,10 +165,6 @@
     
      <build>  
         <plugins>  
-<!-- 	        <plugin> -->
-<!-- 	           <groupId>org.springframework.boot</groupId> -->
-<!-- 	           <artifactId>spring-boot-maven-plugin</artifactId> -->
-<!-- 	         </plugin> -->
             <plugin>  
                 <groupId>org.apache.maven.plugins</groupId>  
                 <artifactId>maven-compiler-plugin</artifactId>  
@@ -251,7 +245,7 @@
             </plugin>  
         </plugins>
         
-        <!-- 引入相关资源 ，后期建议统一放到Resource目录中-->
+        <!-- 打包时引入相关资源文件-->
 		<resources>
 			<resource>
 				<filtering>false</filtering>
