--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,21 @@
     <spring.version>4.3.7.RELEASE</spring.version>
     <poi.version>3.17</poi.version>
     <main.path>com.kendy.application.Main</main.path>
+    <mapper.version>3.4.2</mapper.version>
 
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.spring.platform</groupId>
+        <artifactId>platform-bom</artifactId>
+        <version>1.1.2.RELEASE</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <!-- Spring依赖 -->
@@ -103,13 +116,6 @@
       <version>1.4.1</version>
     </dependency>
 
-    <!-- mysql数据库连接 -->
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.40</version>
-    </dependency>
-
     <!-- POI Excel组件 -->
     <dependency>
       <groupId>org.apache.poi</groupId>
@@ -170,28 +176,10 @@
       <version>8.40.14</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
-<!--    <dependency>
-      <groupId>io.reactivex.rxjava2</groupId>
-      <artifactId>rxjava</artifactId>
-      <version>2.1.17</version>
-      <scope>test</scope>
-    </dependency>
-
-    &lt;!&ndash; https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjavafx &ndash;&gt;
     <dependency>
-      <groupId>io.reactivex.rxjava2</groupId>
-      <artifactId>rxjavafx</artifactId>
-      <version>2.2.2</version>
-      <scope>test</scope>
-    </dependency>-->
-
-    <!-- https://mvnrepository.com/artifact/junit/junit -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
+      <groupId>javax.persistence</groupId>
+      <artifactId>persistence-api</artifactId>
+      <version>1.0</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.belerweb/pinyin4j -->
@@ -201,6 +189,52 @@
       <version>2.5.1</version>
     </dependency>
 
+    <!--数据库配置-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.40</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <!--通用Mapper -->
+    <dependency>
+      <groupId>tk.mybatis</groupId>
+      <artifactId>mapper</artifactId>
+      <version>3.4.2</version>
+    </dependency>
+    <!-- 阿里连接池 -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+
+    <!--单元测试-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.3.14.RELEASE</version>
+    </dependency>
 
   </dependencies>
 
@@ -209,6 +243,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -265,6 +300,35 @@
           </execution>
         </executions>
       </plugin>
+      <!--自动生成实体-->
+      <plugin>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <version>1.3.5</version>
+        <configuration>
+          <configurationFile>src/main/resources/mybatis-generator/generatorConfig.xml</configurationFile>
+          <verbose>true</verbose>
+          <overwrite>true</overwrite>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.5</version>
+          </dependency>
+          <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.40</version>
+          </dependency>
+          <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <version>${mapper.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+
       <!-- 使用launch4j进行打包成exe -->
       <plugin>
         <groupId>com.akathist.maven.plugins.launch4j</groupId>
@@ -322,13 +386,7 @@
         <directory>src/main/resources</directory>
         <includes>
           <include>**/*.*</include>
-        </includes>
-      </resource>
-      <resource>
-        <filtering>false</filtering>
-        <directory>/docs</directory>
-        <includes>
-          <include>**/*.*</include>
+          <include>mapper/*.xml</include>
         </includes>
       </resource>
     </resources>
