--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.kendy</groupId>
@@ -18,6 +19,15 @@
     <poi.version>3.17</poi.version>
     <main.path>com.kendy.application.Main</main.path>
     <mapper.version>3.4.2</mapper.version>
+
+    <!--数据库配置-->
+    <db.jdbc.groupId>mysql</db.jdbc.groupId>
+    <db.jdbc.artifactId>mysql-connector-java</db.jdbc.artifactId>
+    <db.jdbc.version>5.1.40</db.jdbc.version>
+    <db.jdbc.driverClassName>com.mysql.jdbc.Driver</db.jdbc.driverClassName>
+    <db.jdbc.url><![CDATA[jdbc:mysql://127.0.0.1:3306/financial?characterEncoding=UTF-8]]></db.jdbc.url>
+    <db.jdbc.username>root</db.jdbc.username>
+    <db.jdbc.password><![CDATA[123456]]></db.jdbc.password>
 
   </properties>
 
@@ -222,6 +232,14 @@
       <artifactId>druid</artifactId>
       <version>1.1.2</version>
     </dependency>
+
+    <!--引入Lombok-->
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.2</version>
+        <scope>provided</scope>
+      </dependency>
 
     <!--单元测试-->
     <dependency>
