--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,13 @@
       <version>1.0.4</version>
     </dependency>
 
+    <!-- 引进Excel4J -->
+    <dependency>
+      <groupId>com.github.crab2died</groupId>
+      <artifactId>Excel4J</artifactId>
+      <version>2.1.4-Final2</version>
+    </dependency>
+
     <!-- 网络请求 -->
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
