fix:修改复有特殊符号的俱乐部名称导出报错的缺陷

--- a/src/main/resources/log4j/log4j.properties
+++ b/src/main/resources/log4j/log4j.properties
@@ -12,5 +12,6 @@ log4j.appender.E.Append = true
 log4j.appender.E.Threshold = DEBUG
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %p ]  %m%n
+log4j.appender.E.additivity = false
 
 #http://blog.csdn.net/guoquanyou/article/details/5689652 %c
