--- a/pom.xml
+++ b/pom.xml
@@ -376,6 +376,7 @@
               </classPath>
               <icon>src/main/resources/images/financial.ico</icon>
               <jre>
+                <!--<path>C:/Program Files/Java/jre1.8.0_181</path>-->
                 <minVersion>1.8.0</minVersion>
                 <jdkPreference>preferJre</jdkPreference>
               </jre>
