--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,14 @@
         <scope>provided</scope>
       </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.jfxtras/jmetro -->
+    <!--<dependency>-->
+      <!--<groupId>org.jfxtras</groupId>-->
+      <!--<artifactId>jmetro</artifactId>-->
+      <!--<version>4.2</version>-->
+    <!--</dependency>-->
+
+
     <!--单元测试-->
     <dependency>
       <groupId>junit</groupId>
