--- a/src/main/resources/log4j/log4j.properties
+++ b/src/main/resources/log4j/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %x %m%n
 
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = logs/financial.log
+log4j.appender.E.File = D:/logs/financial.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = DEBUG
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
